--- a/letter-game/index.html
+++ b/letter-game/index.html
@@ -128,7 +128,42 @@
       from { transform: scale(1); }
       to { transform: scale(1.2); }
     }
-  </style>
+  
+    #celebration {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      z-index: 1000;
+    }
+
+    #final-score-text {
+      font-size: 32px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    #celebration button {
+      padding: 12px 24px;
+      font-size: 18px;
+      background-color: #4da6ff;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #celebration button:hover {
+      background-color: #1d8ef1;
+    }
+
+</style>
 </head>
 <body>
   <div id="progress-bar"></div>
@@ -142,9 +177,8 @@
   <div id="game-container"></div>
 
   <div id="celebration">
-    <div class="emoji">🎉🎉🎉</div>
-    <h1>축하합니다! 잘 해내셨습니다!</h1>
-    <div class="emoji">🎊🎊🎊</div>
+    <h1 id="final-score-text"></h1>
+    <button onclick="location.reload()">다시 해볼래요</button>
   </div>
 
   <script src="problems.js"></script>
@@ -164,8 +198,8 @@
     let currentStep = 0;
     let currentIndex = 0;
 
-    const correctSound = new Audio("sounds/correct.mp3");
-    const wrongSound = new Audio("sounds/wrong.mp3");
+    const correctSound = null;
+    const wrongSound = null;
 
     function playSound(letter) {
       const audio = new Audio(`sounds/${letter}.mp3`);
@@ -230,14 +264,15 @@
               currentStep++;
               if (currentStep === currentAnswer.length) {
                 results[currentIndex] = true;
-                updateProgressBar();
-                correctSound.onended = () => nextProblem();
+updateProgressBar();
+setTimeout(nextProblem, 700);
                 correctSound.play();
               }
             } else {
               results[currentIndex] = false;
               updateProgressBar();
-              wrongSound.onended = () => nextProblem();
+              wrongSound.play();
+                wrongSound.onended = () => nextProblem();
               wrongSound.play();
             }
           }
@@ -247,7 +282,9 @@
     }
 
     function nextProblem() {
-      if (results.every(r => r === true)) {
+      if (results.every(r => r === true || r === false)) {
+        const correctCount = results.filter(r => r === true).length;
+        document.getElementById('final-score-text').innerText = `점수: ${correctCount} / ${results.length}`;
         celebration.style.display = 'flex';
         return;
       }
