--- a/count-number_1~5fruit-game/index.html
+++ b/count-number_1~5fruit-game/index.html
@@ -71,6 +71,6 @@
   <div id="question">몇 개일까요?</div>
   <div id="number-image"></div>
   <div id="choices"></div>
-  <script src="script.js"></script>
+  <script src="problems.js"></script>
 </body>
 </html>
