--- a/word-game/word-game-index.html
+++ b/word-game/word-game-index.html
@@ -39,17 +39,21 @@
       max-width: 250px;
       max-height: 250px;
     }
+
+
     #game-container {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 12px;
-      max-width: 900px;
+      max-width: 1200px;
       margin: 0 auto;
     }
     .card {
       position: relative;
       width: 100%;
       padding-top: 60%;
+      perspective: 1000px;
+      max-width: 320px;
     }
     .card-content {
       position: absolute;
@@ -83,7 +87,7 @@
       justify-content: center;
       font-size: 80px;
       font-weight: bold;
-      letter-spacing: 8px;
+      letter-spacing: 10px;
     }
     .card-front {
       background-color: white;
@@ -140,7 +144,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255, 255, 255, 0.95);
+      background: rgba(15, 0, 0, 0.95);
       z-index: 1000;
     }
 
@@ -167,52 +171,6 @@
 
 
 
-#game-container {
-  gap: 40px;                 /* 카드 간 간격 더 넓게 */
-  max-width: 1400px;         /* 전체 가로폭 더 넓게 */
-  justify-content: center;   /* 카드 가운데 정렬 */
-}
-
-
-
-.card-content {
-  perspective: 1000px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  transform-origin: center center; /* 중심 기준 회전 */
-}
-
-.card-inner {
-  width: 100%;
-  height: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  position: relative;
-  transform-origin: center center;  /* 핵심: 중심 기준으로 회전 */
-}
-
-
-.card {
-  position: relative;
-  width: 100%;
-  padding-top: 60%;
-  perspective: 1000px;
-  max-width: 260px;  /* 약간 더 좁게 조정 */
-
-}
-
-
-
-.card.flipped .card-inner {
-  transform: rotateY(180deg);
-}
-
 
 
 </style>
@@ -233,7 +191,7 @@
     <button onclick="location.reload()">다시 해볼래요</button>
   </div>
 
-  <script src="word_problems.js"></script>
+  <script src="problems.js"></script>
   <script>
     const pastelColors = ["#fef3c7", "#fde68a", "#bae6fd", "#c4b5fd", "#fbcfe8", "#a7f3d0", "#fca5a5", "#fcd34d"];
     const imageEl = document.getElementById('problemImage');
@@ -336,7 +294,7 @@ setTimeout(nextProblem, 700);
     function nextProblem() {
       if (results.every(r => r === true || r === false)) {
         const correctCount = results.filter(r => r === true).length;
-        document.getElementById('final-score-text').innerText = `점수: ${correctCount} / ${results.length}`;
+document.getElementById('final-score-text').innerText = `점수: ${correctCount} / ${results.length}`;
         celebration.style.display = 'flex';
         return;
       }
